Correct z-index again, fix pbm with user 0 fixes #373

--- a/web/css/widgets.css
+++ b/web/css/widgets.css
@@ -104,7 +104,7 @@
 	right:51px;
         position: fixed;
         top: 32px;
-        z-index: 2000;
+        z-index: 1100;
 }
 .widget_collection_top
 {
